# culmus

./: CHANGES  David-Bold.sfd  David-BoldItalic.sfd  David-Medium.sfd  David-MediumItalic.sfd  DavidCLM-Bold.afm  DavidCLM-Medium.afm  Frank-Bold.sfd  Frank-BoldOblique.sfd  Frank-Medium.sfd  Frank-MediumOblique.sfd  GenerateOTF.pe  GeneratePfa.pe  GenerateTTF.pe  HadasimCLM-Bold.sfd  HadasimCLM-BoldOblique.sfd  HadasimCLM-Regular.sfd  HadasimCLM-RegularOblique.sfd  KeterYG-Bold.sfd  KeterYG-BoldOblique.sfd  KeterYG-Medium.sfd  KeterYG-MediumOblique.sfd  LICENSE  Miriam-Bold.sfd  Miriam-Book.sfd  MiriamMonoCLM-Bold.sfd  MiriamMonoCLM-BoldOblique.sfd  MiriamMonoCLM-Book.sfd  MiriamMonoCLM-BookOblique.sfd  Nachlieli-Bold.sfd  Nachlieli-BoldOblique.sfd  Nachlieli-Light.sfd  Nachlieli-LightOblique.sfd  SimpleCLM-Bold.sfd  SimpleCLM-BoldOblique.sfd  SimpleCLM-Medium.sfd  SimpleCLM-MediumOblique.sfd  StamAshkenazCLM.sfd  StamSefaradCLM.sfd  culmus.spec  (+3 more)
0.101/: DavidCLM-Medium.pfa  DavidCLM-MediumItalic.afm  culmus.conf
0.102/: CHANGES  culmus.spec
current/: DavidCLM-Bold.pfa  DavidCLM-MediumItalic.pfa  culmus.spec
debian/: .gitignore  NEWS  changelog  control  copyright  culmus.postinst  culmus.preinst  culmus.prerm  dirs  rules  watch
dictionary/: CulmusDic_2_FOLDOC.pl  CulmusDic_2_nakdan.pl  FOLDOC_head.txt  FOLDOC_head_mwn.txt  FOLDOC_head_wald.txt  HeWiktionary_2_CulmusDic.pl  HebrewWordNet_2_CulmusDic.pl  LICENSE  WaldsteinHeEn_2_FOLDOC.pl  build.sh  extrawords.txt  install.sh  milot.utf
dictionary/waldstein/: 001.txt  010-011.txt  022-023.txt
fontforge_python/: AAYN.fea  AddHebrewContextualGPOS.py  AddHebrewGPOS.py  AddHebrewGSUB.py  ContextualGPOS.fea  CreatePrecomposedGlyphs.py  GuessMarkToMarkGaps.py  InitHebrewGlyphData.py  Kern2Comments.py  Ladino.fea  main.py  utils.py  utils_ui.py
hspell-java/: HSpellWrapper.java  INSTALL  LibHSpellJ.c  LibHSpellJ.h  LibHSpellJ.java  Makefile.in  WHATSNEW  configure  configure.in
nakdan/: BakalHaShimush.java  CHANGES  CulmusNakdan.java  CulmusOOoNakdan.java  DictionaryDataReader.java  H.java  HLingData.java  HSpellRunner.java  HSplit.java  HeHaYedia.java  JavaExceptionMeaning.java  LexicalItem.java  MANIFEST.MF  MemHaShimush.java  NakdanException.java  NikudRuleFactory.java  ShinHaZika.java  TestInstall.java  TestNakdan.java  VavHaHibur.java  XMeaningImpl.java  build.sh  description.xml
